<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:maxHeight="200dp"
            android:minWidth="100dp"
            android:minHeight="100dp"
            android:src="@drawable/ic_baseline_person_outline_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldImageLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:hint="@string/hint_image"
            app:layout_constraintTop_toBottomOf="@id/imageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
            />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldNomLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:hint="@string/hint_nom"
            app:layout_constraintTop_toBottomOf="@id/textFieldImageLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldTelephoneLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:hint="@string/hint_telephone"
            app:layout_constraintTop_toBottomOf="@id/textFieldNomLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldTelephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldWebsiteLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:hint="@string/hint_website"
            app:layout_constraintTop_toBottomOf="@id/textFieldTelephoneLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldAdresseLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:hint="@string/hint_address"
            app:layout_constraintTop_toBottomOf="@id/textFieldWebsiteLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldAdresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldAproposLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:hint="@string/hint_props"
            app:layout_constraintTop_toBottomOf="@id/textFieldAdresseLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldApropos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:maxLength="30"
                android:paddingBottom="30pt"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="90dp"
            android:enabled="false"
            android:text="@string/register"
            app:cornerRadius="50dp"
            app:layout_constraintTop_toBottomOf="@id/textFieldAproposLayout"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

